@@ -17,7 +17,7 @@
 ** along with this program; if not, write to the Free Software
 ** Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 **/
-	require_once('include/debug.inc.php');
+require_once('include/debug.inc.php');
 	
 function __autoload($class_name){
 	$class_name = zbx_strtolower($class_name);
