@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-1591] fixed "advanced icons" for image type map elements (Aly)
  - [ZBX-2379] fixed trigger expression editing with trigger builder (Maxim Andruhovich/AM)
  - [ZBX-1882] fixed selecting items from disabled hosts for graphs (Aly)
  - [ZBX-1126] fixed large numbers processing for values stored as 'Delta' (Sasha)
